Got alignment issues fixed (mostly) for box model. Looking forward to flexbox.

--- a/index.css
+++ b/index.css
@@ -3,12 +3,25 @@
 }
 body {
     background: #DDB9A3 url("./assets/footer_img.jpg") no-repeat fixed;
+    background-size:cover;
 }
-nav p {
-    margin-left:10%;
-    margin-right:10%;
+nav div {
+    background-color:red;
+    position:relative;
+    font-size:0px;
+    display:inline-block;
+    width:calc((100%/3) - 8px);
+    box-sizing:border-box;
+    
 }
-nav button {
+nav div button {
+    margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+    font-size:16px;
     display:inline-block;
     color:white;
     width:8em;
@@ -73,29 +86,15 @@ h1 {
 .title-block p {
     text-align:center;
     vertical-align:bottom;
-    font-size:.8em;
+    font-size:1em;
     font-weight:600;
     margin-left: 5%;
     margin-right:0%;
 }
 
-nav a {
-    width:100%;
-    font-size:100%; 
-     margin-top:.1em;
-    margin-bottom:.1em;
-    height:100%;
-    border-radius:25%;
-    padding:1.8%;
-    line-height:100%;
-    text-align:center;
-    display: block;
-    color:#FFFFFF;
-    text-decoration-line:none;
-}
 .image-block img {
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.49);
-    
+    border:2px solid #DDB9A3; 
     margin-top:2em;
     margin-bottom:4em;
     width: 90%;
@@ -107,14 +106,12 @@ nav a {
     text-align:center; 
 }
 .plan {
-    margin-right:8em;
     background-color:#FF764E;
 }
 .learn {
     background-color:#5ED3EB;
 }
 .involve {
-    margin-left:8em;
     background-color:#FFCD69;
 }
 .plan:hover {
